# kariba

./: .clang-format  .gitignore  CITATION.cff  LICENSE  Makefile  README.md  citations.bib  make.config  make.config-template
.github/workflows/: ci.yml  deploy-docs.yml
BHJet/: .gitignore  DemoPyjetMain.py  EBL.cpp  Makefile  Plot_joined.py  bhjet.cpp  bhjet.hpp  bhwrap.cpp  jetpars.cpp  pyjetmain.cpp  utils.cpp
Examples/: Makefile  Particles.py  kariba_corona_examples.cpp  kariba_examples.hpp  kariba_particles_examples.cpp  kariba_singlezone_examples.cpp  utils.cpp
Kariba/: BBody.cpp  BBody.hpp  Bknpower.cpp  Bknpower.hpp  Compton.cpp  Compton.hpp  Cyclosyn.cpp  Cyclosyn.hpp  EBL.cpp  Electrons.cpp  GammaRays.cpp  Kappa.cpp  Kappa.hpp  Makefile  Mixed.cpp  Mixed.hpp  Neutrinos_pg.cpp  Neutrinos_pp.cpp  Particles.cpp  Particles.hpp  Powerlaw.cpp  Powerlaw.hpp  Radiation.cpp  Radiation.hpp  ShSDisk.cpp  ShSDisk.hpp  Thermal.cpp  Thermal.hpp
Kariba/kariba/: BBody.hpp  Bknpower.hpp  Compton.hpp  Cyclosyn.hpp  EBL.hpp  Electrons.hpp  GammaRays.hpp  Kappa.hpp  Mixed.hpp  Neutrinos_pg.hpp  Neutrinos_pp.hpp  Particles.hpp  Powerlaw.hpp  Radiation.hpp  ShSDisk.hpp  Thermal.hpp  constants.hpp
docs/: Doxyfile  about.md  considerations.md  index.md  installation.md  style-and-tips.md  testing.md  using.md
examples/: .gitignore  Coronae.py  Makefile  Singlezone.py  corona.cpp  examples.hpp  kariba_corona_examples  kariba_particles_examples  kariba_singlezone_examples  particles.cpp  singlezone.cpp  utils.cpp
examples/model/: Makefile  Plot_separate.py  bhjet.cpp  bhjet.hpp  bhjet_class.cpp  bhjet_class.hpp  bhwrap.cpp  jetpars.cpp  pyjetmain.cpp  utils.cpp
examples/model_old/: bhjet.hpp  jetoutput.hpp  pyjetmain.cpp  testinterp
src/: BBody.cpp  Bknpower.cpp  Compton.cpp  Cyclosyn.cpp  EBL.cpp  Electrons.cpp  GammaRays.cpp  Kappa.cpp  Makefile  Mixed.cpp  Neutrinos_pg.cpp  Neutrinos_pp.cpp  Particles.cpp  Powerlaw.cpp  Radiation.cpp  ShSDisk.cpp  Thermal.cpp
src/kariba/: BBody.hpp  Bknpower.hpp  Compton.hpp  Cyclosyn.hpp  EBL.hpp  Electrons.hpp  GammaRays.hpp  Kappa.hpp  (+9 more)
tests/: CMakeLists.txt  Makefile  README.md  test_bknpower.cpp  test_compton.cpp  test_cyclosyn.cpp  test_distributions.cpp  test_ebl.cpp  test_main.cpp  test_particles.cpp  test_powerlaw.cpp  test_radiation.cpp
